# guitar-sound-mimic

./: .gitattributes  .gitignore  .gitmessage  BUILDING.md  CHEATSHEET.md  CMakeLists.txt  GIT_SETUP.md  LICENSE  PUSH_TO_GIT.md  QUICKSTART.md  README.md  RUN_ME_FIRST.md  START_HERE.md  TESTING.md  TEST_SUMMARY.md  WORKFLOW.md  WORK_TO_HOME_WORKFLOW.md  run_tests.sh  setup.bat  setup.sh
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h  AudioPlayback.h  SamplePlayer.cpp  SamplePlayer.h  ToneMatcher.cpp  ToneMatcher.h  ToneProfiler.cpp  ToneProfiler.h
Source/DSP/: FrequencyAnalyzer.cpp  FrequencyAnalyzer.h
Tests/: FrequencyAnalyzerTests.cpp  README.md  TestRunner.cpp  ToneMatcherTests.cpp  ToneProfileTests.cpp  ToneProfilerTests.cpp
tools/: README.md  requirements.txt  separate_guitar.py
